# bevy_asteroid

./: Cargo.toml  README.md
assets/shaders/: animate_shader.wgsl
src/: asteroid.rs  main.rs  player.rs
